2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Add ‘\n\’ to separate assembly instructions.

	* longlong.h (add_ssaaaa, sub_ddmmss, umul_ppmm)
	(count_leading_zeros, umul_ppmmxx, udiv_qrnnd):
	...here, for various architectures.
	* superopt.h [sparc || __GNUC__]: #undef alloca.
	(PERFORM_ADD_CIO, PERFORM_ADD_CO, PERFORM_SUB_CIO, PERFORM_SUB_CO)
	(PERFORM_ADC_CIO, PERFORM_ADC_CO): Add ‘\n\’ to separate assembly
	instructions, for various architectures.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	[C int] Include <stdlib.h> for ‘exit’.

	* superopt.c: #include <stdlib>.

2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>

	* COPYING: Update to GPLv3.

Sat Jun  3 01:28:17 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (random_word): Delete unused variable tot_bits.

Thu Jun  1 04:05:25 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (init_random_word): Make state1 have char type.
	Use random() on alpha, since srand48 doesn't work there.

Wed May 31 17:08:12 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (test_operands): Add -3, -2, 3, 30, 31, 32, 63, 64.
	(random_word): Return small numbers with high probability.

Sat May 27 18:32:03 1995  Torbjorn Granlund  <tege@matematik.su.se>

	* superopt.c (N_RANDOM_TEST_OPERANDS): Set to 25000.
	(random_word): Rewrite.
	(RANDOM): New macro, internal to random_word.

	* goal.def (DBL_SHIFT_LO, DBL_SHIFT_LO_TRUNC): Arity is 2.

Wed May 24 07:40:49 1995  Torbjorn Granlund  <tege@phydeaux.cygnus.com>

	* superopt.c (N_RANDOM_TEST_OPERANDS): New macro.
	(init_test_sets): Use N_RANDOM_TEST_OPERANDS.
	Also, zero n_words when in declarator.
	(random_word): Conditionally complement x before loop.

	* synth.def (synth_skip): Loop over dr also for unary operations.
	* superopt.c (recurse): Delete inline declaration.

Tue May 23 01:35:16 1995  Torbjorn Granlund  <tege@rtl.cygnus.com>

	* goal.def: Add *_SEL goals.

Mon May 22 23:00:31 1995  Torbjorn Granlund  <tege@rtl.cygnus.com>
