@@ -1,5 +1,11 @@
 2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>
 
+	[C int] Convert some funcs from K&R style to prototypes.
+
+	* superopt.c (ffs_internal, floor_log2, ceil_log2): ...here.
+
+2020-01-23  Thien-Thi Nguyen  <ttn@gnu.org>
+
 	[C int] Add ‘\n\’ to separate assembly instructions.
 
 	* longlong.h (add_ssaaaa, sub_ddmmss, umul_ppmm)
